--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="about-text">
                     <h2 data-aos="fade-right">About Me</h2>
-                    <p data-aos="fade-left">
+                    <p data-aos="fade-left" style="color: #555;">
                         Hi, I'm Karan Mishra, a passionate Python AI Developer with a strong focus on research and
                         development. I love exploring new technologies, traveling, and watching cartoons and movies for
                         entertainment. With a solid background in machine learning and data analytics, I thrive on
