--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <!-- <h1>MyPortfolio</h1>
-                <p>Web Developer</p> -->
+                <h1>MyPortfolio</h1>
+                <p>Python AI/M<L Developer</p>
             </div>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span class="nav-toggle-icon"></span>
