--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- Navigation -->
     <nav>
         <div class="container">
-            <div class="logo">
-                <h1>MyPortfolio</h1>
+            <div class="logo" style="text-align: justify;">
+                <h1>Karn M. Portfolio</h1>
                 <p>Python AI/M<L Developer</p>
             </div>
             <button class="nav-toggle" aria-label="Toggle navigation">
@@ -85,9 +85,6 @@
         </div>
     </section>
 
-
-
-    <!-- About Section -->
     <!-- About Section -->
     <section id="about">
         <div class="container">
