--- a/index.html
+++ b/index.html
@@ -224,21 +224,21 @@
                 <div class="service" data-aos="fade-left">
                     <div class="service-box">
                         <h3 style="color: #007FFF ">Machine Learning Research</h3>
-                        <p>Developing and researching advanced machine learning models to solve complex problems and
+                        <p style="color: #555;">Developing and researching advanced machine learning models to solve complex problems and
                             deliver impactful solutions.</p>
                     </div>
                 </div>
                 <div class="service" data-aos="fade-left">
                     <div class="service-box">
                         <h3 style="color: #007FFF">AI Development</h3>
-                        <p>Creating AI-driven applications and tools to enhance automation and improve user experiences.
+                        <p style="color: #555;">Creating AI-driven applications and tools to enhance automation and improve user experiences.
                         </p>
                     </div>
                 </div>
                 <div class="service" data-aos="fade-left">
                     <div class="service-box">
                         <h3 style="color: #007FFF">Data Analytics</h3>
-                        <p>Analyzing data to provide actionable insights and support data-driven decision-making.</p>
+                        <p style="color: #555;">Analyzing data to provide actionable insights and support data-driven decision-making.</p>
                     </div>
                 </div>
             </div>
